ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudapi-ingress
  namespace: mustaers-cloudapi
spec:
 ingressClassName: nginx
 rules:
    - host: MY_REPO
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloudapi-service
                port:
                  number: 80
